# Drop-finder

./: .detail-enrichment-ci-trigger  .gitignore  .import-v9-marker  .metadata-ci-trigger  .rating-fix-trigger  .trigger-final-metadata-publish  .trigger-listing-card-metadata-audit  .trigger-live-acceptance-761f-v2  .trigger-rating-provenance-applicator  DROPFINDER_OS_V9_0_RELEASE_REPORT.md  METADATA_PHASE2.md  METADATA_PHASE2_CI_TRIGGER.txt  METADATA_PHASE2_SCOPE.md  METADATA_PHASE2_TRIGGER_2.txt  PROJECT_STATUS.md  README.md  app-shell.json  index.html  pyproject.toml  sw.js
.dropfinder-bootstrap/: deploy-key-note.txt  deploy-key-public.txt  import-note.txt  part-05.b64  part-10.b64  part-12.b64  progress.txt
.github/: refresh-issue60  refresh-pr384-ci  tmp-route-repair-deploy-trigger  tmp-route-repair-publish-trigger  tmp-source-recovery-publish-trigger
.integration/: BOOTSTRAP_FAILURE.json  COMPOSE
.tmp/: balanced-recovery-publish.txt  fallback-health-followup.patch  fallback-health.patch  pages-cache-convergence.patch  source-recovery-live-v2.txt
assets/: app-CHnlCoPd.js  chunk-D6fhxGoq.js  index-E-nQQfLs.css  marketplace-query-worker-CNdCK8BC.js  marketplace-query-worker-aWiMrZF_.js  marketplace-query-worker-dwMLkhAr.js  vite-manifest.json
automation/: prepared-generation-source-export.trigger
bootstrap/: source.part00.b64  source.part01-02.b64  source.part01.b64  source.part02.b64  source.part03.b64  source.part04.b64  source.part05.b64  source.part07.b64  source.part08.b64
cleanup/: final-repository-trigger.txt
cloud_pages/: app-shell.json  sw.js  (+2 more)
(+798 files in other folders)
