[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dropfinder-reliability"
version = "9.0.0"
description = "Tracked DropFinder reliability control-plane contracts and adapter registry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests/app"]
addopts = "-q"
